<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/button_shape"

    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/instructions_title"
        android:fontFamily="@font/orbitron_bold"
        android:layout_margin="@dimen/dialog_margin"
        android:textSize="@dimen/player_name"
        android:textColor="@color/bigScore"

        />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="@font/play_regular"
    android:textSize="@dimen/dialog_text_size"
    android:textColor="@color/text1color"
    android:layout_marginTop="@dimen/dialog_top_margin"
    android:paddingLeft="@dimen/dialog_small_paddin"
    android:paddingRight="@dimen/dialog_small_paddin"
    android:text="@string/instructions_line1"
    />

<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/play_regular"
            android:textSize="@dimen/dialog_text_size"
             android:textColor="@color/text1color"
            android:layout_marginTop="@dimen/dialog_top_margin"
             android:paddingLeft="@dimen/dialog_small_paddin"
              android:paddingRight="@dimen/dialog_small_paddin"
            android:text="@string/instructions_line2"
 />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/play_regular"
            android:textSize="@dimen/dialog_text_size"
            android:textColor="@color/text1color"
            android:layout_marginTop="@dimen/dialog_top_margin"
            android:paddingLeft="@dimen/dialog_small_paddin"
            android:paddingRight="@dimen/dialog_small_paddin"
            android:text="@string/instructions_line3"
            />
    <Button
        android:id="@+id/close_button"
        android:layout_marginTop="@dimen/dialog_top_margin"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:textColor="@color/text1color"
        android:fontFamily="@font/orbitron_medium"
        android:text="@string/ok"
        android:layout_margin="@dimen/dialog_margin"
        />

</LinearLayout>