<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button_shape"
    >
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:fontFamily="@font/orbitron_medium"
     android:textSize="@dimen/scor"
     android:textColor="@color/playerName"
     android:layout_marginTop="@dimen/dialog_top_margin"
     android:paddingLeft="@dimen/dialog_small_paddin"
     android:paddingRight="@dimen/dialog_small_paddin"
     android:text="@string/change_player_name"
     />

    <EditText
        android:id="@+id/edit_text_change_player_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dialog_margin"
        android:layout_marginTop="@dimen/dialog_top_margin"
        android:fontFamily="@font/play_regular"
        android:inputType=""
        android:maxLength="10"

        android:paddingLeft="@dimen/dialog_small_paddin"

        android:paddingRight="@dimen/dialog_small_paddin"

        android:textColor="@color/playerName"
        android:textSize="@dimen/normal_text_size" />
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:gravity="center_horizontal"
     >
     <Button
         android:id="@+id/ok_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/button_shape"
         android:textColor="@color/text1color"
         android:fontFamily="@font/orbitron_medium"
         android:layout_margin="@dimen/dialog_margin"
         android:text="@string/ok"
         />

     <Button
         android:id="@+id/cancel_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/dialog_margin"
         android:background="@drawable/button_shape"
         android:fontFamily="@font/orbitron_medium"
         android:maxLength="10"
         android:text="@string/cancel"
         android:textColor="@color/text1color" />

 </LinearLayout>

</LinearLayout>